--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "faker": "^5.5.2",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.0",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
   }
